; ModuleID = '/home/carl/AnghaBench/linux/drivers/atm/extr_lanai.c_vcc_tx_unqueue_aal5.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/atm/extr_lanai.c_vcc_tx_unqueue_aal5.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lanai_dev = type { i32 }
%struct.lanai_vcc = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.sk_buff = type { i32 }

@.str = private unnamed_addr constant [53 x i8] c"vcc_tx_unqueue() called with empty backlog (vci=%d)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lanai_dev*, %struct.lanai_vcc*, i32)* @vcc_tx_unqueue_aal5 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vcc_tx_unqueue_aal5(%struct.lanai_dev* %0, %struct.lanai_vcc* %1, i32 %2) #0 {
  %4 = alloca %struct.lanai_dev*, align 8
  %5 = alloca %struct.lanai_vcc*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.sk_buff*, align 8
  %9 = alloca i32, align 4
  store %struct.lanai_dev* %0, %struct.lanai_dev** %4, align 8
  store %struct.lanai_vcc* %1, %struct.lanai_vcc** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load %struct.lanai_vcc*, %struct.lanai_vcc** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @vcc_tx_space(%struct.lanai_vcc* %10, i32 %11)
  store i32 %12, i32* %9, align 4
  %13 = load %struct.lanai_vcc*, %struct.lanai_vcc** %5, align 8
  %14 = call i32 @vcc_is_backlogged(%struct.lanai_vcc* %13)
  %15 = load %struct.lanai_vcc*, %struct.lanai_vcc** %5, align 8
  %16 = getelementptr inbounds %struct.lanai_vcc, %struct.lanai_vcc* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @APRINTK(i32 %14, i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str, i64 0, i64 0), i32 %17)
  br label %19

19:                                               ; preds = %45, %3
  %20 = load i32, i32* %9, align 4
  %21 = icmp sge i32 %20, 64
  br i1 %21, label %22, label %55

22:                                               ; preds = %19
  %23 = load %struct.lanai_vcc*, %struct.lanai_vcc** %5, align 8
  %24 = getelementptr inbounds %struct.lanai_vcc, %struct.lanai_vcc* %23, i32 0, i32 1
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = call %struct.sk_buff* @skb_dequeue(i32* %25)
  store %struct.sk_buff* %26, %struct.sk_buff** %8, align 8
  %27 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %28 = icmp eq %struct.sk_buff* %27, null
  br i1 %28, label %29, label %30

29:                                               ; preds = %22
  br label %60

30:                                               ; preds = %22
  %31 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %32 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @aal5_size(i32 %33)
  store i32 %34, i32* %7, align 4
  %35 = load i32, i32* %7, align 4
  %36 = add nsw i32 %35, 16
  %37 = load i32, i32* %9, align 4
  %38 = icmp sgt i32 %36, %37
  br i1 %38, label %39, label %45

39:                                               ; preds = %30
  %40 = load %struct.lanai_vcc*, %struct.lanai_vcc** %5, align 8
  %41 = getelementptr inbounds %struct.lanai_vcc, %struct.lanai_vcc* %40, i32 0, i32 1
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 0
  %43 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %44 = call i32 @skb_queue_head(i32* %42, %struct.sk_buff* %43)
  br label %68

45:                                               ; preds = %30
  %46 = load %struct.lanai_dev*, %struct.lanai_dev** %4, align 8
  %47 = load %struct.lanai_vcc*, %struct.lanai_vcc** %5, align 8
  %48 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %49 = load i32, i32* %7, align 4
  %50 = call i32 @lanai_send_one_aal5(%struct.lanai_dev* %46, %struct.lanai_vcc* %47, %struct.sk_buff* %48, i32 %49)
  %51 = load i32, i32* %7, align 4
  %52 = add nsw i32 %51, 16
  %53 = load i32, i32* %9, align 4
  %54 = sub nsw i32 %53, %52
  store i32 %54, i32* %9, align 4
  br label %19

55:                                               ; preds = %19
  %56 = load %struct.lanai_vcc*, %struct.lanai_vcc** %5, align 8
  %57 = call i32 @vcc_is_backlogged(%struct.lanai_vcc* %56)
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %68, label %59

59:                                               ; preds = %55
  br label %60

60:                                               ; preds = %59, %29
  %61 = load %struct.lanai_vcc*, %struct.lanai_vcc** %5, align 8
  %62 = getelementptr inbounds %struct.lanai_vcc, %struct.lanai_vcc* %61, i32 0, i32 0
  %63 = load i32, i32* %62, align 4
  %64 = load %struct.lanai_dev*, %struct.lanai_dev** %4, align 8
  %65 = getelementptr inbounds %struct.lanai_dev, %struct.lanai_dev* %64, i32 0, i32 0
  %66 = load i32, i32* %65, align 4
  %67 = call i32 @__clear_bit(i32 %63, i32 %66)
  br label %68

68:                                               ; preds = %39, %60, %55
  ret void
}

declare dso_local i32 @vcc_tx_space(%struct.lanai_vcc*, i32) #1

declare dso_local i32 @APRINTK(i32, i8*, i32) #1

declare dso_local i32 @vcc_is_backlogged(%struct.lanai_vcc*) #1

declare dso_local %struct.sk_buff* @skb_dequeue(i32*) #1

declare dso_local i32 @aal5_size(i32) #1

declare dso_local i32 @skb_queue_head(i32*, %struct.sk_buff*) #1

declare dso_local i32 @lanai_send_one_aal5(%struct.lanai_dev*, %struct.lanai_vcc*, %struct.sk_buff*, i32) #1

declare dso_local i32 @__clear_bit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
